# cursor-learning-chinese-practice-app

./: .gitignore  README.md
.cursor/plans/: browser-first_fullstack_curriculum_5f8f9e6f.plan.md
.cursor/rules/: 00-repo-purpose.md  01-tutor-agent-contract.md  02-learning-workflow.md  03-reference-and-checkpoints.md  04-quality-bar.md  05-stack-notes-react-fastapi.md  06-absolute-beginner-mode.md  07-when-to-ask-human-guide.md
apps/api/: alembic.ini  pyproject.toml  run_dev.sh  run_tests.sh
apps/api/chinese_practice/: auth.py  config.py  main.py  schemas.py  storage.py
apps/api/chinese_practice_api.egg-info/: top_level.txt
apps/api/tests/: conftest.py  test_classroom_phrase_audio_flow.py  test_health.py
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
checkpoints/: README.md  lesson-00-end.md  lesson-01-end.md  lesson-02-end.md  lesson-03-end.md  lesson-04-end.md  lesson-05-end.md  lesson-06-end.md  lesson-07-end.md  lesson-08-end.md  lesson-09-end.md  lesson-10-end.md  lesson-11-end.md  lesson-12-end.md
docs/: ABSOLUTE_BEGINNER.md  CAPSTONE_SPEC.md  CURSOR_PLAYBOOK.md  GETTING_STARTED.md  GLOSSARY.md  MENTOR_GUIDE.md  PROGRESS_TRACKER.md  REFERENCE_USAGE.md  TROUBLESHOOTING.md
lessons/: 00-orientation.md  01-ui-first-run.md  02-react-basics.md  03-api-basics.md  04-db-persistence.md  05-forms-validation.md  06-auth.md  07-roles-authorization.md  08-classrooms-enrollment.md  09-audio-upload-playback.md  10-recording-submissions.md  11-feedback-moderation.md  12-testing-polish.md
reference/: README.md
scripts/: dev.sh  test_api.sh
(+22 files in other folders)
