[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-practice-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.6.0",
  "email-validator>=2.0.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.1.2",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.26.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["chinese_practice*"]

